--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@capacitor/android": "^2.0.2",
     "@capacitor/core": "2.0.2",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/media-capture": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^1.5.2",
+    "cordova-plugin-audioinput": "^1.0.2",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-media-capture": "^3.0.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
