--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-media": "^5.0.3",
     "cordova-plugin-media-capture": "^3.0.3",
+    "cordova-plugin-streaming-media": "^2.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -67,7 +68,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-media": {}
+      "cordova-plugin-media": {},
+      "cordova-plugin-streaming-media": {}
     }
   }
 }
