--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "@capacitor/android": "^2.0.2",
     "@capacitor/core": "2.0.2",
+    "@capacitor/ios": "^2.0.2",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.24.0",
     "@ionic-native/media": "^5.24.0",
@@ -35,6 +36,8 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-media": "^5.0.3",
     "cordova-plugin-media-capture": "^3.0.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-streaming-media": "^2.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -69,7 +72,9 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-media": {},
-      "cordova-plugin-streaming-media": {}
+      "cordova-plugin-streaming-media": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-splashscreen": {}
     }
   }
 }
