--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/android": "^2.0.2",
     "@capacitor/core": "2.0.2",
     "@capacitor/ios": "^2.0.2",
+    "@ionic-native/admob-free": "^5.24.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.24.0",
     "@ionic-native/media": "^5.24.0",
@@ -32,13 +33,14 @@
     "@ionic-native/streaming-media": "^5.24.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^1.5.2",
-    "cordova-plugin-audioinput": "^1.0.2",
+    "cordova-admob-sdk": "^0.24.1",
+    "cordova-plugin-admob-free": "^0.27.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-media": "^5.0.3",
-    "cordova-plugin-media-capture": "^3.0.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-streaming-media": "^2.2.0",
+    "cordova-promise-polyfill": "0.0.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
