--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "com.experiencia.boliche",
   "appName": "experiencia-boliche",
   "bundledWebRuntime": false,
   "npmClient": "npm",
