--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "@ionic-native/media": "^5.24.0",
     "@ionic-native/media-capture": "^5.24.0",
     "@ionic-native/native-audio": "^5.24.0",
-    "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/splash-screen": "^5.24.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/streaming-media": "^5.24.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^1.5.2",
+    "capacitor-admob": "^0.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-media": "^5.0.3",
-    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-streaming-media": "^2.2.0",
     "cordova-promise-polyfill": "0.0.2",
