--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@capacitor/android": "^2.0.2",
-    "@capacitor/core": "2.0.2",
+    "@capacitor/android": "^2.0.0-beta.1",
+    "@capacitor/core": "^2.0.0-beta.1",
     "@capacitor/ios": "^2.0.2",
     "@ionic-native/admob-free": "^5.24.0",
     "@ionic-native/core": "^5.0.7",
@@ -28,7 +28,7 @@
     "@ionic-native/media": "^5.24.0",
     "@ionic-native/media-capture": "^5.24.0",
     "@ionic-native/native-audio": "^5.24.0",
-    "@ionic-native/splash-screen": "^5.24.0",
+    "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/streaming-media": "^5.24.0",
     "@ionic/angular": "^5.0.0",
@@ -36,7 +36,7 @@
     "capacitor-admob": "^0.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-media": "^5.0.3",
-    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-streaming-media": "^2.2.0",
     "cordova-promise-polyfill": "0.0.2",
@@ -59,12 +59,12 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.4",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "^6.0.0",
+    "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
